--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
 body{
     margin:1%;
-    float:bottom-right;
+    /* float:bottom-right; */
     background:black;
 }
 #playwindow{
-    width: 60%;
+    width: 72.5%;
     min-height: 1px;
-    height: 60vh;
+    height: 70vh;
     content: "\200B";
     border:1px solid black;
     float:right;
     padding:0;
     margin:0;
     border-spacing: 0;
+    margin-bottom:1%;
 }
 #pw-tabs{
     width:100.3%;
@@ -37,7 +38,7 @@ body{
 }
 #mainplaywindow{
     margin:0;
-    background-color:white;
+    background-color:lightgrey;
     content: "\200B";
     height:92.3%;
 }
@@ -47,4 +48,42 @@ body{
     /* background:black; */
     padding:0;
     margin:0;
+}
+#text-window{
+    border: 4px double;
+    border-color:black;
+    background:lightgrey;
+    float:left;
+    min-height:1px;
+    height: 92vh;
+    padding:1%;
+    width:24%;
+    font:Georgia;
+}
+#TextTitle{
+    text-align:center;
+}
+/* #StatusW {
+  
+    background-color:black;
+    padding:0px;
+    margin:0px;
+    border: 2px solid dodgerblue;
+    color: white;
+    float: right;
+    min-height:0;
+    right:1vh;
+    bottom: 1%;
+    height:2%;
+    position: absolute;
+    width:60%;
+} */
+#StatusW{
+    background:lightgrey;
+    float:right;
+    width:72.5%;
+    min-height: 1px;
+    height:24vh;
+    margin:0;
+    padding:0;
 }
